post image overflow css fix for large width images

--- a/src/scss/_home-page.scss
+++ b/src/scss/_home-page.scss
@@ -228,6 +228,7 @@
 
         img {
           max-height: 200px;
+          max-width: 100%;
         }
       }
 
